[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flakynetworksimulator"
version = "0.0.3"
authors = [
{name = "Gauransh Soni", email="gauranshiitd@gmail.com"},
]
description = "A cross platform network simulator"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

							
